@@ -1,1 +1,6 @@
 # java-stuff
+
+//comando para ver todas as flags disponiveis
+<pre>
+java -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -XX:+PrintFlagsFinal -XX:+UnlockExperimentalVMOptions -XX:+UseJVMCICompiler -XX:+JVMCIPrintProperties -XX:-UseZGC -XshowSettings:properties -Djvmci.PrintConfig -version
+ </pre>
